fix z-index select wrapper

--- a/src/stylus/blocks/_news.styl
+++ b/src/stylus/blocks/_news.styl
@@ -130,6 +130,7 @@
 
 .news-page__select_wrapper.active
   display: block
+  z-index 10
 
 
 @media (max-width:1024px)
